CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Resample)
SET(${PROJECT_NAME}_VERSION_MAJOR 0)
SET(${PROJECT_NAME}_VERSION_MINOR 1)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
INCLUDE(BuildDate)
ADD_DEFINITIONS(-std=c++11)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(res)

# Build Summary
MESSAGE(STATUS "=============== Build Summary ===============")
MESSAGE(STATUS "Project Name:              " ${PROJECT_NAME})
MESSAGE(STATUS "Project Major Version:     " ${${PROJECT_NAME}_VERSION_MAJOR})
MESSAGE(STATUS "Project Minor Version:     " ${${PROJECT_NAME}_VERSION_MINOR})
MESSAGE(STATUS "Build Date:                " ${BUILD_DATE})
MESSAGE(STATUS "CMAKE_MODULE_PATH:         " ${CMAKE_MODULE_PATH})
MESSAGE(STATUS "CMAKE_INCLUDE_PATH:")
FOREACH(PATH ${CMAKE_INCLUDE_PATH})
  MESSAGE(STATUS '${PATH}')
ENDFOREACH()
MESSAGE(STATUS "=============================================")

# for vim youcompleteme plugin
STRING(REPLACE ";" "','-I" CMAKE_INCLUDE_PATH_STR "${CMAKE_INCLUDE_PATH}")
CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/.ycm_extra_conf.py.in"
  "${PROJECT_SOURCE_DIR}/.ycm_extra_conf.py"
)
